--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,60 +1,131 @@
 /* src/styles/Header.css */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
+
 .header {
-    background-color: #282c34;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-between
-  }
-  
-  .header nav ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .header nav ul li {
-    display: inline;
-    margin: 0 10px;
-  }
-  
-  .header nav ul li a {
-    color: white;
-    text-decoration: none;
+  width: 100%;
+  height: 75px;
+  background: #0a141d;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 4);
+}
+
+.container {
+  width: 80%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.logo {
+  float: left;
+  line-height: 75px;
+}
+
+.logo h1 {
+  color: #fff;
+  font-weight: 400;
+  font-size: 24px;
+  cursor: default;
+  margin-left: 80px;
+}
+
+.logo img {
+  height: 60px;
+  margin-top: 5px;
+}
+
+.menu {
+  float: right;
+  line-height: 75px;
+}
+
+.menu a {
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px 15px;
+  line-height: normal;
+  font-size: 14px;
+  transition: all 500mxs ease;
+  border-bottom: 4px solid transparent;
+}
+
+.menu a:hover {
+  color: green;
+  border-bottom: 4px solid green;
+}
+
+/* Boton del menu */
+#btn-menu {
+  display: none;
+}
+
+.button {
+  float: right;
+  display: none;
+}
+
+.button label {
+  color: #fff;
+  background: green;
+  padding: 5px;
+  font-size: 14px;
+  border-radius: 3px;
+  cursor: pointer;
+
+}
+
+/* responsive */
+@media only screen and (min-width: 220px) and (max-width:760px) {
+  .header {
+    height: 60px;
   }
 
-  .logo {
-    height: 80px; /* Ajusta el tamaño del logo según tus necesidades */
-    margin-right: 10px;
-  }
-  
-  h1 {
-    margin: 0;
-    font-size: 1.5em;
+  .logo,
+  .button {
+    line-height: 60px;
   }
 
-  .header-left {
-    display: flex;
-    align-items: center;
-    margin-left: 200px;
-  }
-  
-  .header-right {
-    margin-right: 200px; /* Esto moverá el contenido a la derecha */
-  }
-  
-  .header-list {
-    padding: 10px;
+  .logo h1 {
+    font-size: 18px;
+    margin-left: 10px;
+
   }
 
-  .header-item {
-    padding: 8px;
+  .menu {
+    position: absolute;
+    background: #234;
+    width: 60%;
+    height: 100vh;
+    top: 60px;
+    left: 0;
+    transition: all 500ms ease;
+    transform: translateX(-100%);
   }
 
-  .header-link {
-    padding: 10px;
+  #btn-menu:checked~.menu {
+    transform: translateX(-0%);
   }
 
+  .menu a {
+    display: block;
+    margin-top: 10px;
+  }
 
-  
+  .button {
+    display: block;
+  }
+
+  .logo img {
+    display: none;
+  }
+
+}
